--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -30,20 +30,206 @@ img {
 input, textarea {
   outline: none;
 }
-body{
-  background:#f90;
+$viewW:640px;
+.zmiti-main-ui{
+  background: #ebebeb;
+
+  
+  .zmiti-scroll-C{
+    width:100%;
+    .zmiti-scroller{
+        @include transition(.2s);
+    }
+    box-sizing:border-box;
+    overflow: hidden;
+  }
+  @include pos(a);
+  width:640px;
+  height: 100vh;
+  left: 50%;
+  margin-left: -320px;
+  .zmiti-date{
+    height: 30px;
+    line-height: 30px;
+    text-align: center;
+    margin-top: 20px;
+    span{
+      color:#fff;
+      line-height: 40px;
+      background: #ccc;
+      padding: 8px 20px;
+      font-size: 24px;
+      @include br(5px);
+    }
+  }
+  
+  .zmiti-member{
+    width:$viewW - 70;
+    margin: 25px auto;
+    background: #ccc;
+    @include br(5px);
+    color:#fff;
+    padding: 14px 20px;
+    line-height: 32px;
+    box-sizing:border-box;
+    font-size: 22px;
+    @include  pos(r);
+    -webkit-text-size-adjust: none;
+    div{
+      
+      height: 100%;
+      width:100%;
+    }
+  }
 }
-.zmiti-btn{
-  width:200px;
-  height:50px;
-  margin:40px auto;
+
+.zmiti-modify-groupname{
+  width:570px;
+  margin:20px auto;
   text-align: center;
-  line-height: 50px;
-  background: #2db7f5;
+  background:#ccc;
   color:#fff;
-  @include br(10px);
+  padding:6px 0;
+  @include br(5px);
 }
-.zmiti-msg{
-  text-align: center;
-  color:#fff;
+.zmiti-talk-C{
+  width:$viewW - 70;
+  margin:25px auto;
+  li{
+
+
+    &.zmiti-user{
+      -webkit-box-pack:end;   
+      .zmiti-talk-content{
+        
+         margin-right: 24px;
+         display: inline-block;
+          &.zmiti-talk-img{
+
+            aside:last-of-type{
+
+              &:before{
+                display:none;
+              }
+              div{
+                background:transparent;
+                border:none;
+                padding:0;
+              }
+            }  
+          }          
+          aside:last-of-type{
+
+              @include pos(r);
+              div{
+                background: #a7e753;
+
+              }
+              &:before{
+                content:'';
+                right:-11px;
+                left: auto;
+                background: #a7e753;
+                border-left: none;
+                border-bottom:none; 
+              }
+            }
+      }
+    }
+    @include displayBox(horizontal);
+    -webkit-box-pack:start;
+    -webkit-box-align:start;
+    margin-top: 30px;
+    .zmiti-talk-content{
+      @include displayBox(vertical);
+    -webkit-box-pack:start;
+    -webkit-box-align:start;
+      margin-left: 24px;
+
+      &.zmiti-talk-img{
+        aside:last-of-type{
+          &:before{
+            display:none;
+          }
+          div{
+            background:transparent;
+            border:none;
+            padding:0;
+          }
+        }  
+      }
+      aside:last-of-type{
+        max-width: 380px;
+        div{
+          
+          background:#fff;
+          border:1px solid #bbbbbb; 
+          font-size: 26px;
+          @include br(8px);
+          padding:18px 14px;
+          a{
+            color:inherit;    
+          }
+        }
+        box-sizing:border-box;
+        @include pos(r);
+        &:before{
+          content:'';
+          @include pos(a);
+          left:-11px;
+          @include br(3px);
+          width:20px;
+          height: 20px;
+          background: #fff;
+          border:1px solid #bbb;
+          border-right: none;
+          border-top:none; 
+          top: 20px;
+          @include transform(rotate(45deg));
+        }
+      }
+    }
+  }
+  .zmiti-talk-head{
+    width:72px;
+    height:72px;
+    
+  }
+  .zmiti-talk-content{
+    aside:first-of-type{
+      color:#666666;
+      @include transform(scale(.9) translate3d(0,-6px,0));
+      @include transformOrigin(left);
+    }
+  }
+}
+  .zmiti-talk-input{
+    @include  pos(f);
+    bottom: 0;
+    left: 50%;
+    margin-left: -320px;
+    height: 85px;
+  }
+
+.zmiti-frame{
+  width:640px;
+  height:100%;
+  @include pos(f);
+  left:0;
+  top:0;
+  z-index: 999;
+  iframe{
+    width:100%;
+    height:100%;
+  }
+  .zmiti-back{
+    @include pos(f);
+    bottom:0;
+    right:0;
+    background:rgba(0,0,0,.7);
+    color:#fff;
+    padding:12px 26px;
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+  }
 }
